# simplerILI9341

./: .gitignore  CMakeLists.txt  LICENSE  README.md  simpler9341.cpp  simpler9341.h  simpler9341_adv.cpp  simpler9341_ex.cpp  simpler9341_ex_hs.h  simpler9341_ex_ll.cpp  simpler9341_ex_ll_1bpp.cpp  simpler9341_ex_ll_1bpp_template.h  simpler9341_ex_ll_1fc.cpp  simpler9341_ex_ll_1nofc.cpp  simpler9341_ex_ll_2bpp.cpp  simpler9341_ex_ll_2bpp_stubs.cpp  simpler9341_ex_ll_2bpp_template.h  simpler9341_ex_ll_2nofc.cpp  simpler9341_ex_ll_fc.cpp  simpler9341_geometry.cpp  simpler9341_initCommand.cpp  simpler9341_priv.h
.github/workflows/: codeql.yml  ossar.yml
cpp/: CMakeLists.txt  simpler9341.cpp  simpler9341.h  simpler9341_color.h  simpler9341_ex.cpp  simpler9341_ex_hs.h  simpler9341_ex_ll.cpp  simpler9341_ex_ll_1bpp.cpp  simpler9341_ex_ll_1bpp_template.h  simpler9341_ex_ll_2bpp_stubs.cpp  simpler9341_ex_ll_2bpp_template.h  simpler9341_geometry.cpp  simpler9341_priv.h  simpler_9341_st7735_common.h
cpp/demo/example_color/: example_color_test.cpp
cpp/demo/example_geometry/: main.cpp
cpp/demo/example_st7735_160x128/: demofont.h  main_st7735_test.cpp  readme.txt  st7735_priv.h  updateFont.sh
cpp/demo/example_st7735_160x128_partially_working/: main.cpp  st7735_priv.h  waree12.h
cpp/demo/example_st7735_170x320/: readme.txt
cpp/platformExample/lnArduino/: ili_ln8bits.cpp  ili_ln8bits.h  ili_lnSpi.cpp  ili_lnSpi.h
platformExample/: CMakeLists.txt  README.md
platformExample/example_1.69inch_rounded_corner/: main.cpp
platformExample/example_3.2inch_touch/: main.cpp
platformExample/lnArduino/: ili_ln8bits.cpp  ili_ln8bits.h  ili_lnSpi.cpp  ili_lnSpi.h
platformExample/longanNano/: gd32_8bits.cpp  gd32_8bits.h  gd32_spi.cpp  gd32_spi.h
rust/: README.txt
rust/Ili9341/: Cargo.toml
rust/Ili9341/cpp/: bindgen.sh  hs_decoder_bindings.rs
rust/Ili9341/src/: access.rs  colors.rs  glyph.rs  lib.rs  simpler9341.rs  util.rs
rust/Ili9341/src/simpler9341/: bitmap.rs  gen.sh  geometry.rs  text.rs  text_1C_r.rs  text_1NC.rs  text_1NC_r.rs  text_2C_r.rs  text_2NC.rs  text_2NC_r.rs  text_nohs.rs  text_template.rs  text_template1C.txt  text_template2C.txt
rust/demo_ili9341_320x240_spi/rs/src/: app.rs  lib.rs  pinout_bp.rs
rust/demo_st7735_160x128/: CMakeLists.txt  app.rs  lib.rs  spi_ili9341.rs  testfont.rs
rust/demo_st7735_160x128/rs/: Cargo.toml
rust/demo_st7735_160x128/rs/src/: app.rs  lib.rs  pinout_bp.rs  pinout_rp2040.rs  st7735_init.rs  testfont.rs
rust/demo_st7735_170x320/rs/src/: app.rs  lib.rs  st7735_init.rs  st7735_priv.h
rust/ili9341/: Cargo.toml
rust/ili9341/src/: access.rs  colors.rs  gen_sin.py  glyph.rs  ili9341.rs  ili9341_cmds.rs  ili9341_init_sequence.rs  lib.rs  settings.rs  util.rs
rust/ili9341/src/ili9341/: bitmap.rs  gauge.rs  gauge_meter.rs  gen.sh  geometry.rs  sin.rs  text.rs  text_1NC_r.rs  text_1c_r.rs  text_1nc_r.rs  text_2c_r.rs  text_2nc_r.rs  text_template1C.txt  text_template2C.txt
rust/ili9341/src/simpler9341/: text_1C_r.rs  text_2C_r.rs  text_2NC_r.rs  text_nohs.rs  text_template2C.txt
rust/ln_spi/: Cargo.toml
rust/ln_spi/demo/: app.rs
rust/ln_spi/src/: spi_ili9341.rs
rust/lnspi_ili9341/: CMakeLists.txt
rust/lnspi_ili9341/rs/: Cargo.toml
rust/lnspi_ili9341/rs/src/: spi_ili9341.rs
rust/sim/: Cargo.toml
rust/sim/src/: app.rs  rust_logo_nc.rs  testfont.rs  testfont2C.rs
tools/font/: Readme.md
