[package]
name = "ili9341"
version = "0.1.0"
edition = "2021"

[features]
sim = []
hs = []

[dependencies]
cty = "0.2.2"
heatshrink_byte = { git = "https://github.com/mean00/heatshrink",  version = "*"  }

[profile.dev]
codegen-units = 1
debug = true
lto = false
opt-level       = 's'

[profile.release]
codegen-units = 1
debug = false
lto = false
opt-level       = 's'


