[package]
name = "ili9341"
version = "0.1.0"
edition = "2021"

[features]
sim = []
hs = []

[dependencies]
cty = "0.2.2"
heatshrink_byte =   { git = "https://github.com/mean00/heatshrink",  version = "*"  }
simpler_gfx =       { git="https://github.com/mean00/simpler_gfx.git"}

[profile.dev]
codegen-units = 0
debug = true
lto = false
#opt-level       = '1'

[profile.release]
codegen-units = 0
debug = true
lto = false
#opt-level       = 's'


