[package]
name = "ili_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "ili_exec"
path = "src/app.rs"
#crate-type = ["staticlib"] # Creates static lib

[dependencies]
#sdl2 = { version = "0.35" , features = ["gfx"]}
macroquad = "0.3"
ili9341 = { version = "*" , path="../ili9341", features = ["sim","hs"]}
[profile.dev]
codegen-units = 1
debug = true
lto = true
opt-level       = 's'

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level       = 's'

[profile.dev.package."*"]
codegen-units   = 1
opt-level       = "s"
lto = true

