[package]
name = "ili_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "ili_exec"
path = "src/app.rs"
#crate-type = ["staticlib"] # Creates static lib

[dependencies]

macroquad = "0.4.10"
ili9341 = { version = "*" , path="../ili9341", features = ["sim","hs"]}
simpler_gfx =       { git="https://github.com/mean00/simpler_gfx.git"}

[profile.dev]
codegen-units = 1
debug = true
lto = false
opt-level       = 's'

[profile.release]
codegen-units = 1
debug = false
lto = false
opt-level       = 's'

[profile.dev.package."*"]
codegen-units   = 1
opt-level       = "s"

