[package] 
authors = ["mean00 <mean00@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "rsdemo"
version = "0.0.0"


[dependencies]
cty         = "0.2.2"
rnarduino   =           { path = "../../../../lnArduino/rust/rnArduino/"}
ili9341     =           { path = "../../ili9341", features = ["hs"]}
lnspi_ili9341  =        { path = "../../lnspi_ili9341/rs"}
simpler_gfx =           { git="https://github.com/mean00/simpler_gfx.git"}
ufmt        = "*"
heapless    =           { version = "*", features = ["ufmt-impl"] }

[lib]
name = "rsdemo"
path = "src/lib.rs"
crate-type = ["staticlib"] # Creates static lib

[profile.dev]
codegen-units = 1
debug = true
lto = true
opt-level       = 's'

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level       = 's'

[profile.dev.package."*"]
codegen-units   = 1
opt-level       = "s"
